UT for TypeKey